# toz3

./: .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  codegen.cpp  codegen.h  complex_type.cpp  complex_type.h  context.h  do_install.sh  main.cpp  scope.h  state.cpp  state.h  toz3Options.cpp  toz3Options.h  type_map.cpp  type_map.h  version.h.cmake  z3_int.h  z3_interpreter.cpp  z3_interpreter.h
.github/workflows/: build.yaml  build.yml  cpplint.yaml  cpplint.yml  pytest.yaml  test_pruner.yaml  test_pruner.yml  test_validate.yaml  test_validate.yml
common/: base_type.cpp  base_type.h  complex_type.cpp  complex_type.h  create_z3.cpp  create_z3.h  exceptions.h  expression_resolver.cpp  expression_resolver.h  expressions.cpp  expressions.h  operands.cpp  parser.cpp  print.cpp  print.h  scope.h  simple_type.cpp  simple_type.h  state.cpp  state.h  type_base.cpp  type_base.h  type_complex.cpp  type_complex.h  type_map.cpp  type_map.h  type_simple.cpp  type_simple.h  type_table.cpp  util.cpp  util.h  visitor_fill_type.cpp  visitor_fill_type.h  visitor_interpret.cpp  visitor_interpret.h  visitor_specialize.cpp  visitor_specialize.h  z3_int.h  z3_interpreter.cpp  z3_interpreter.h
compare/: compare.cpp  compare.h  main.cpp  options.cpp  options.h
externs/: core.cpp
interpret/: main.cpp  options.cpp  options.h
pruner/: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  before_replace_vars.p4  bug.p4i  do_install.sh  test_pruner.py
pruner/cmake/: TestUtils.cmake
pruner/example_programs/: program_with_crash_bug.p4  program_with_err_message.p4  program_with_semantic_bug.p4  program_with_semantic_bug_goal.p4
pruner/example_programs/fabric/: before_replace_vars.p4  before_unused.p4  bug.p4  bug.p4i  fabric.p4  run_creduce.sh  test.sh
pruner/example_programs/fabric/include/: bng.p4  parser.p4
pruner/example_programs/fabric/include/control/: acl.p4  packetio.p4
pruner/example_programs/fabric/include/int/: int_main.p4
pruner/example_programs/fabric_with_creduce/: fabric.p4  test.sh
pruner/example_programs/fabric_with_creduce/include/: parser.p4
pruner/example_programs/fabric_with_creduce/include/control/: acl.p4
pruner/src/: .gitattributes  boolean_pruner.cpp  boolean_pruner.h  compiler_pruner.cpp  compiler_pruner.h  constants.h  counter.cpp  counter.h  expression_pruner.cpp  expression_pruner.h  extended_unused.cpp  extended_unused.h  main.cpp  pruner_options.cpp  pruner_options.h  pruner_util.cpp  pruner_util.h  replace_variables.cpp  replace_variables.h  statement_pruner.cpp  statement_pruner.h
pruner/src/contrib/: CPPLINT.cfg
pruner/tests/: check_prog.py
pruner/tests/references/: create_references.sh
pruner/tests/references/crash_bugs/: GpSOr_173.p4  after_unused.p4  before_unused.p4  crash_four_reference.p4  crash_one.p4  crash_one_reference.p4  crash_three.p4  crash_three_reference.p4  crash_two_reference.p4  nQClX_125_reference.p4  wflHs_132.p4  wflHs_132_reference.p4
pruner/tests/references/validation_bugs/: IPGO4_8_reference.p4  KSr1T_78.p4  one.p4  two_reference.p4
pruner/tests/references/validation_bugs/validated/IPGO4_8/: IPGO4_8-FrontEnd_0_P4V1::getV1ModelVersion.p4  IPGO4_8-FrontEnd_11_TypeInference.p4  IPGO4_8-FrontEnd_13_BindTypeVariables.p4  IPGO4_8-FrontEnd_19_StructInitializers.p4  IPGO4_8-FrontEnd_22_PassRepeated.p4  IPGO4_8-FrontEnd_26_RemoveAllUnusedDeclarations.p4  IPGO4_8-FrontEnd_27_SimplifyParsers.p4  IPGO4_8-FrontEnd_29_UniqueNames.p4  IPGO4_8-FrontEnd_31_MoveInitializers.p4  IPGO4_8-FrontEnd_32_SideEffectOrdering.p4  IPGO4_8-FrontEnd_33_SimplifyControlFlow.p4  IPGO4_8-FrontEnd_34_MoveDeclarations.p4  IPGO4_8-FrontEnd_35_SimplifyDefUse.p4  IPGO4_8-FrontEnd_36_UniqueParameters.p4  IPGO4_8-FrontEnd_37_SimplifyControlFlow.p4  IPGO4_8-FrontEnd_38_SpecializeAll.p4  IPGO4_8-FrontEnd_40_RemoveReturns.p4  IPGO4_8-FrontEnd_48_InlineFunctions.p4  IPGO4_8-FrontEnd_4_CreateBuiltins.p4  IPGO4_8-FrontEnd_51_SimplifyControlFlow.p4  IPGO4_8-FrontEnd_53_UniqueNames.p4  IPGO4_8-FrontEnd_54_LocalizeAllActions.p4  IPGO4_8-FrontEnd_55_UniqueNames.p4  IPGO4_8-FrontEnd_56_UniqueParameters.p4  IPGO4_8-FrontEnd_58_HierarchicalNames.p4  IPGO4_8-FrontEnd_6_ConstantFolding.p4  IPGO4_8-MidEnd_10_HandleNoMatch.p4  IPGO4_8-MidEnd_15_CopyStructures.p4  IPGO4_8-MidEnd_22_Predication.p4  IPGO4_8-MidEnd_23_MoveDeclarations.p4  IPGO4_8-MidEnd_25_LocalCopyPropagation.p4  IPGO4_8-MidEnd_26_ConstantFolding.p4  IPGO4_8-MidEnd_29_SimplifyControlFlow.p4  IPGO4_8-MidEnd_35_SynthesizeActions.p4  IPGO4_8-MidEnd_36_MoveActionsToTables.p4  IPGO4_8-MidEnd_3_RemoveActionParameters.p4
pruner/tests/references/validation_bugs/validated/IPGO4_8_reference/: IPGO4_8_reference-FrontEnd_18_RemoveParserControlFlow.p4  IPGO4_8_reference-FrontEnd_19_StructInitializers.p4  IPGO4_8_reference-FrontEnd_22_PassRepeated.p4  IPGO4_8_reference-FrontEnd_27_SimplifyParsers.p4  IPGO4_8_reference-FrontEnd_29_UniqueNames.p4  IPGO4_8_reference-FrontEnd_32_SideEffectOrdering.p4  IPGO4_8_reference-FrontEnd_33_SimplifyControlFlow.p4  IPGO4_8_reference-FrontEnd_34_MoveDeclarations.p4  IPGO4_8_reference-FrontEnd_36_UniqueParameters.p4  IPGO4_8_reference-FrontEnd_40_RemoveReturns.p4  IPGO4_8_reference-FrontEnd_48_InlineFunctions.p4  IPGO4_8_reference-FrontEnd_51_SimplifyControlFlow.p4  IPGO4_8_reference-FrontEnd_53_UniqueNames.p4  IPGO4_8_reference-FrontEnd_54_LocalizeAllActions.p4  IPGO4_8_reference-FrontEnd_55_UniqueNames.p4  IPGO4_8_reference-FrontEnd_56_UniqueParameters.p4  IPGO4_8_reference-FrontEnd_58_HierarchicalNames.p4  IPGO4_8_reference-MidEnd_10_HandleNoMatch.p4  IPGO4_8_reference-MidEnd_11_SimplifyParsers.p4  IPGO4_8_reference-MidEnd_15_CopyStructures.p4  IPGO4_8_reference-MidEnd_22_Predication.p4  IPGO4_8_reference-MidEnd_23_MoveDeclarations.p4  IPGO4_8_reference-MidEnd_25_LocalCopyPropagation.p4  IPGO4_8_reference-MidEnd_26_ConstantFolding.p4  IPGO4_8_reference-MidEnd_29_SimplifyControlFlow.p4  IPGO4_8_reference-MidEnd_36_MoveActionsToTables.p4
tools/: check_style.sh  run_validation_test.py  util.py
validate/: main.cpp  options.cpp  options.h
(+184 files in other folders)
